things needed to show it fails

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "P'unk Avenue",
   "license": "MIT",
   "dependencies": {
-    "apostrophe": "^2.47.0"
+    "apostrophe": "^2.47.0",
+    "apostrophe-workflow": "^2.28.0"
   },
   "nodemonConfig": {
     "verbose": true,
